--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,26 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<div class="rowflex">
+	<div class="bg">
+		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image1.jpg" class="image">
+</div>
+<div class="bg">
+  		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image2.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image3.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image4.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image5.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image6.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image7.jpg" class="image" >
+</div>
+<div class="bg">
+    		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image8.jpg" class="image" >
+</div>
+</div>
