--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,17 +2,35 @@
 {
   display: flex;
   flex-wrap: nowrap;
-  right: 0;
   bottom: 0;
   position: fixed;
+  margin: 0 auto;
+  right: 5%;
+  left: 5%;
 }
 
 .bg{
   width: 160px;
   margin: 10px;
+  cursor: pointer;
 }
 
 .image{
   width: 100%;
   height: 127px;
+  opacity: 0.3;
+}
+.opacitycls{
+  opacity: 1;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 162px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    width: 87%;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
 }
