--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div style="display:flex; flex-direction:column">
-	<div style="width: 90%;margin: 0 auto;" [ngClass]="{'enlargecls': enlarge === true}" (click)="enlargeclick()">
-		<img style="width:100%;max-height: 800px;object-fit: cover;"  src="{{srcstring}}">
-    <div *ngIf="srcstring !== '' && (value === '2' || value === '5')" class="overlay">This is caption text</div>
+	<div [ngClass]="{'enlargediv': enlarge === false}" (click)="enlargeclick()">
+		<img style="width:100%;max-height: 800px;object-fit: cover;"  [ngClass]="{'enlargecls': enlarge === true}" src="{{srcstring}}">
+    <div *ngIf="srcstring !== '' && (value === '2' || value === '5')" class="overlay" [ngClass]="{'overlay1': enlarge === true}">This is caption text</div>
 </div>
-<div class="rowflex">
+<div *ngIf="enlarge === false" class="rowflex">
 	<div class="bg" (click)="imgclick('1')">
 		<img src="https://cdn.jsdelivr.net/gh/kishvd/angular-Test@master/src/assets/image1.jpg" [ngClass]="{'opacitycls': value === '1'}" class="image">
 </div>
